k8s/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.kevingomez.fr`)
      services:
        - kind: Service
          name: nextcloud
          port: http
  tls:
    certResolver: letsencrypt
